common/haproxy-ingress/test-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-haproxy-public
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-haproxy-public
  template:
    metadata:
      labels:
        app: test-haproxy-public
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: test-haproxy-public-html
---
apiVersion: v1
kind: Service
metadata:
  name: test-haproxy-public
  namespace: default
spec:
  selector:
    app: test-haproxy-public
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-haproxy-public
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    haproxy.org/path-rewrite: "/(.*) /"
spec:
  ingressClassName: haproxy-public
  rules:
    - host: test.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-haproxy-public
                port:
                  number: 80
